level_4/samples/networking/restrict/allow-stage-business-tier-to-db.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-stage-business-tier-to-db
  namespace: products-prod
spec:
  podSelector:
    matchLabels:
      app:  products-db
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: products-business
      namespaceSelector:
        matchLabels:
          products-prod-db-access: allow     
    ports:
      - protocol: TCP
        port: 8080
